# IntentAnalyser-AIGuardrail

./: .dockerignore  .env.template  .gitignore  AI Guardrail.code-workspace  Dockerfile  Makefile  README.md  cli_dashboard.py  docker-compose.dev.yml  docker-compose.gateway.yml  docker-compose.yml  guardrail.config.yaml  main.py  pyproject.toml  render.yaml  requirements.txt  stress_test_results.json
.github/workflows/: ci.yml  docker-publish.yml  release.yml
app/: main.py  policy_cli.py  wizard.py
app/api/: routes.py
app/client/: client.py
app/core/: axes.py  cache.py  capabilities.py  logging.py  rate_limit.py  taxonomy.py  tool_registry.py
app/policies/: main.cedar  main.yaml
app/schemas/: action.py  intent.py
app/services/: action_validator.py  audit.py  classic_policy.py  evaluation_engine.py  hf_inference.py  policy_engine.py  priority_engine.py  risk_engine.py  runtime_config.py  sandbox.py
app/services/classifiers/: __init__.py  action_detector.py  domain_classifier.py  risk_detector.py
app/services/detectors/: base.py  keyword_booster.py  regex.py  semantic.py  zeroshot.py
configs/: README.md
configs/local/: .env.gateway  guardrail.config.yaml
configs/policies/: main.yaml
configs/prod/: .env.gateway  guardrail.config.yaml
configs/staging/: .env.gateway  guardrail.config.yaml
helm/llm-gateway/: Chart.yaml  values-local.yaml  values-prod.yaml  values-staging.yaml  values.yaml
helm/llm-gateway/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  (+3 more)
integration_examples/: nodejs_example.js  python_example.py
llm_guardrail.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
packaging/: guardrail_entry.py  llm_gateway.spec
scripts/: build-binary.ps1  build-binary.sh  quickstart.sh  run-with-config.sh
tests/: dataset_200.json  gen_tests.py  generate_dataset.py  proxy_stress_results.json  run_tests.sh  stress_test_proxy.py  test_keyword_booster.py  test_output.txt  test_recruiter_policy.py  test_runner.py  test_signal_contract_validation.py  tests.json  verify_client.py
